--- a/main.html
+++ b/main.html
@@ -8,6 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Why I want to become a developer?</h1>
+	<p>Space complexity is related to the amount of memory occupied by a program. In simple terms, any program’s space complexity is calculated by the total amount of space it occupies in the computer’s memory. So when we calculate space complexity, we take into account all the inputs of the program as well as the auxiliary space used. For example, if a program takes an array of size n as input, the space complexity of the program becomes O(n).</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
